--- a/template.yaml
+++ b/template.yaml
@@ -25,7 +25,7 @@ Resources:
     Properties:
       DefinitionUri: statemachine/stori_flow.asl.json
       DefinitionSubstitutions:
-        ProcessFileFunctionArn: !GetAtt ProcessFileFunction.Arn
+        ProcessDataFunctionArn: !GetAtt ProcessDataFunction.Arn
         GetDataFunctionArn: !GetAtt GetDataFunction.Arn
         SendEmailFunctionArn: !GetAtt SendEmailFunction.Arn
         # DDBPutItem: !Sub arn:${AWS::Partition}:states:::dynamodb:putItem
@@ -49,7 +49,7 @@ Resources:
         - S3ReadPolicy:
             BucketName: !Ref TransactionsBucket
         - LambdaInvokePolicy:
-            FunctionName: !Ref ProcessFileFunction
+            FunctionName: !Ref ProcessDataFunction
         - LambdaInvokePolicy:
             FunctionName: !Ref GetDataFunction
         - LambdaInvokePolicy:
@@ -59,10 +59,10 @@ Resources:
         # - DynamoDBWritePolicy:
             # TableName: !Ref TransactionTable
 
-  ProcessFileFunction:
+  ProcessDataFunction:
     Type: AWS::Serverless::Function
     Properties:
-      CodeUri: functions/process_file/
+      CodeUri: functions/process_data/
       Handler: app.lambda_handler
       Runtime: python3.9
       Architectures:
